--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.1"
     defaultConfig {
         applicationId "com.example.hzkto.ball"
         minSdkVersion 16
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        jackOptions {
-            enabled true
-        }
     }
     buildTypes {
         release {
@@ -21,8 +18,6 @@ android {
         }
     }
     compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
     }
 }
 
@@ -33,10 +28,11 @@ dependencies {
     })
     compile files('libs/commons-lang-2.3.jar')
 
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:support-v4:24.2.1'
-    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:appcompat-v7:25.+'
+    compile 'com.android.support:support-v4:25.+'
+    compile 'com.android.support:design:25.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     compile 'me.priyesh:chroma:1.0.2'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:gridlayout-v7:25.0.1'
 }
