--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,12 +27,12 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile files('libs/commons-lang-2.3.jar')
-
-    compile 'com.android.support:appcompat-v7:25.+'
-    compile 'com.android.support:support-v4:25.+'
-    compile 'com.android.support:design:25.+'
+    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:support-v4:25.0.1'
+    compile 'com.android.support:design:25.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     compile 'me.priyesh:chroma:1.0.2'
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:gridlayout-v7:25.0.1'
+    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:25.0.1'
 }
